--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "pusher-js": "^8.4.0-rc2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-markdown": "^9.0.3",
     "react-scripts": "5.0.1",
     "text-encoding": "^0.7.0",
     "web-vitals": "^2.1.4"
