--- a/package.json
+++ b/package.json
@@ -9,13 +9,17 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "buffer": "^6.0.3",
+    "d3-force": "^3.0.0",
     "pusher-js": "^8.4.0-rc2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-force-graph-2d": "^1.27.0",
+    "react-force-graph-3d": "^1.26.0",
     "react-markdown": "^9.0.3",
     "react-router-dom": "^7.1.4",
     "react-scripts": "5.0.1",
     "text-encoding": "^0.7.0",
+    "three": "^0.173.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
