--- a/package.json
+++ b/package.json
@@ -5,14 +5,16 @@
   "dependencies": {
     "@prisma/client": "^6.3.1",
     "@solana/spl-token": "^0.3.11",
-    "@solana/web3.js": "^1.87.6",
+    "@solana/web3.js": "^1.98.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "buffer": "^6.0.3",
+    "bip39": "^3.1.0",
     "cors": "^2.8.5",
+    "crypto-js": "^4.2.0",
     "d3-force": "^3.0.0",
     "dotenv": "^16.4.7",
+    "ed25519-hd-key": "^1.3.0",
     "express": "^4.21.2",
     "node-fetch": "^3.3.2",
     "pusher": "^5.2.0",
@@ -28,12 +30,13 @@
     "three": "^0.173.0",
     "tweetnacl": "^1.0.3",
     "tweetnacl-util": "^0.15.1",
+    "typescript": "4.9.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "npx craco start",
+    "build": "npx craco build",
+    "test": "npx craco test",
     "eject": "react-scripts eject",
     "dev": "react-scripts start",
     "server": "node server.js"
@@ -58,6 +61,23 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "prisma": "^6.3.1"
+    "@craco/craco": "^7.1.0",
+    "assert": "^2.1.0",
+    "buffer": "^6.0.3",
+    "crypto-browserify": "^3.12.1",
+    "https-browserify": "^1.0.0",
+    "os-browserify": "^0.3.0",
+    "path-browserify": "^1.0.1",
+    "prisma": "^6.3.1",
+    "process": "^0.11.10",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
+    "url": "^0.11.4"
+  },
+  "resolutions": {
+    "typescript": "4.9.5"
+  },
+  "overrides": {
+    "typescript": "4.9.5"
   }
 }
