--- a/package.json
+++ b/package.json
@@ -62,17 +62,21 @@
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@craco/craco": "^7.1.0",
+    "@tailwindcss/postcss7-compat": "^2.2.17",
     "assert": "^2.1.0",
+    "autoprefixer": "^10.4.16",
     "buffer": "^6.0.3",
     "crypto-browserify": "^3.12.1",
     "https-browserify": "^1.0.0",
     "os-browserify": "^0.3.0",
     "path-browserify": "^1.0.1",
+    "postcss": "^8.4.31",
     "prisma": "^6.3.1",
     "process": "^0.11.10",
     "react-app-rewired": "^2.2.1",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
+    "tailwindcss": "^3.3.5",
     "url": "^0.11.4"
   },
   "resolutions": {
