--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^16.4.7",
     "ed25519-hd-key": "^1.3.0",
     "express": "^4.21.2",
+    "mermaid": "^11.4.1",
     "node-fetch": "^3.3.2",
     "pusher": "^5.2.0",
     "pusher-js": "^8.4.0-rc2",
@@ -25,6 +26,7 @@
     "react-dom": "^18.2.0",
     "react-force-graph-2d": "^1.27.0",
     "react-force-graph-3d": "^1.26.0",
+    "react-icons": "^5.5.0",
     "react-markdown": "^9.0.3",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
