--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-markdown": "^9.0.3",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "reactflow": "^11.11.4",
     "text-encoding": "^0.7.0",
     "three": "^0.173.0",
     "tweetnacl": "^1.0.3",
